--- a/k8s/06-auth-service.yaml
+++ b/k8s/06-auth-service.yaml
@@ -30,10 +30,10 @@ spec:
     spec:
       containers:
       - name: auth-service
-        image: auth-service:1.8
+        image: saaiiikrishna/auth-service:msd-dev1.4
         imagePullPolicy: Never
         ports:
-        - containerPort: 8081
+        - containerPort: 8080
           name: http
 
         envFrom:
